2020-08-16  7.0.10-28  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-28 GIT revision 17533:41e79fc33:20200816

2020-08-16  7.0.10-28  <quetzlzacatenango@image...>
  * Distorted clip path after -extent (reference
    https://github.com/ImageMagick/ImageMagick/issues/2414).
  * Paths in Photoshop EPS files are corrupted on conversion (reference
    https://github.com/ImageMagick/ImageMagick/issues/2413).

2020-08-09  7.0.10-27  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-27 GIT revision 17525:ae6ace83c:20200809

2020-08-08  7.0.10-27  <quetzlzacatenango@image...>
  * fix regression when detecting the libz delegate library.

2020-08-08  7.0.10-26  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-26 GIT revision 17520:9c2744359:20200808

2020-08-02  7.0.10-26  <quetzlzacatenango@image...>
  * Add animated webp blend method support (reference
    https://github.com/ImageMagick/ImageMagick/pull/2351).
  * Add support for OpenRaster (.ora) image format (reference
    https://github.com/ImageMagick/ImageMagick/pull/2342).
  * Paths in Photoshop EPS files are no longer corrupted (reference
    https://github.com/ImageMagick/ImageMagick/issues/2380).

2020-07-31  7.0.10-25  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-25 GIT revision 17497:0e12ff687:20200731

2020-07-25  7.0.10-25  <quetzlzacatenango@image...>
  * Remove UseCIEColor setting from PDF code as its use is not recommended.
  * Update to the latest documentation.

2020-07-18  7.0.10-24  <quetzlzacatenango@image...>
  * Release ImageMagick version 7.0.10-24 GIT revision 17483:d11a2ec03:20200718

2020-07-18  7.0.10-24 Dirk Lemstra <dirk@lem.....org>
  * To preserve compression of input image with the tiff encoder use:
    -define tiff:preserve-compression=true.

2020-07-05  7.0.10-24  <quetzlzacatenango@image...>
  * Add support for the -white-balance command-line option.